# contools--bittools

./: .gitattributes  .gitignore  CMakeLists.txt  CPackMakeConfig.cmake  README_EN.txt  changelog.txt  configure_gen.bat.in  configure_nogen.bat.in  environment_local.cmake.in
_scripts/: __init__.bat  build_x86.bat  configure.bat  configure_gen.bat  configure_nogen.bat  install_debug_x86.bat  install_release_x86.bat  pack_debug_x86.bat  pack_release_x86.bat
cmake/: Common.cmake  ConfigureFile.cmake  FindEnvironment.cmake  Qt.cmake  UseEnvironment.cmake
src/_common/tackle/: file_handle.cpp  file_reader.cpp  smart_handle.hpp
src/_common/utility/: assert.hpp  crc.cpp  crc.hpp  crc_tables.hpp  debug.cpp  debug.hpp  math.hpp  platform.hpp  preprocessor.hpp  utility.cpp  utility.hpp
src/gencrctbl/: main.cpp
src/mirrorfile/: main.cpp
src/xorfile/: main.cpp  main.h
